--- a/src/main/resources/templates/syw/noticeList.html
+++ b/src/main/resources/templates/syw/noticeList.html
@@ -4,8 +4,8 @@
 <head>
 	<link rel="stylesheet" href="/css/noticeList.css">
 	<title>DAEBAK</title>
-<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-<script>
+	<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+	<script>
 		$(document).ready(function () {
 			$(".notice-item").click(function () {
 				$(this).find(".notice-content").slideToggle();
@@ -28,58 +28,52 @@
 </head>
 
 <body>
-<html layout:decorate="~{jjj/header}">
-<div id="my_infomation_modify" layout:fragment="content"
-	class="container my-3">
-	<nav id="mypage_sidebar_nav">
-		<ul>
-			<li class="mypage_sidebar"><a th:href="@{/more/noticeList}"
+	<html layout:decorate="~{jjj/header}">
+	<div id="my_infomation_modify" layout:fragment="content" class="container my-3">
+		<nav id="mypage_sidebar_nav">
+			<ul>
+				<li class="mypage_sidebar"><a th:href="@{/more/noticeList}"
 						style="color: #e40000d3; font-weight: bold;">공지사항</a></li>
 				<li class="mypage_sidebar"><a th:href="@{/more/inquiry}">1:1 문의</a></li>
-		</ul>
-	</nav>
-	<div class="content-container" th:if="${page.getContent().size() > 0}">
-		<h2 class="notice_header">공지사항</h2>
+			</ul>
+		</nav>
+		<div class="content-container" th:if="${page.getContent().size() > 0}">
+			<h2 class="notice_header">공지사항</h2>
 
-		<div th:each="notice : ${page}" class="notice-item">
-			<h3 th:text="${notice.title}"></h3>
-			<p class="date"
-				th:text="${#temporals.format(notice.createDate, 'yyyy-MM-dd HH:mm')}"></p>
-			<div class="notice-content"
-				style="background-color: rgb(243, 243, 243); white-space: pre-line;">
-				<p th:utext="${notice.content}"></p>
+			<div th:each="notice : ${page}" class="notice-item">
+				<h3 th:text="${notice.title}"></h3>
+				<p class="date" th:text="${#temporals.format(notice.createDate, 'yyyy-MM-dd HH:mm')}"></p>
+				<div class="notice-content" style="background-color: rgb(243, 243, 243); white-space: pre-line;">
+					<p th:utext="${notice.content}"></p>
 
-				<!-- 이미지 경로를 Thymeleaf 태그로 불러옴 -->
-				<div class="notice_img" th:if="${notice.imagePath}">
-					<img th:if="${notice.imagePath}"
-						th:src="@{/img/notice_img/{imageName}(imageName=${notice.imagePath})}"
-						alt="이미지 없음"  width="100%" height="80%"/>
+					<!-- 이미지 경로를 Thymeleaf 태그로 불러옴 -->
+					<div class="notice_img" th:if="${notice.imagePath}">
+						<img th:if="${notice.imagePath}"
+							th:src="@{/img/notice_img/{imageName}(imageName=${notice.imagePath})}" alt="이미지 없음"
+							width="100%" height="80%" />
+					</div>
 				</div>
+
 			</div>
 
+			<div class="pagination">
+				<ul>
+					<li class="page-item" th:if="${page.number > 0}"><a class="page-link" href="#"
+							th:href="@{/more/noticeList(page=${page.number - 1})}">이전</a></li>
+					<li th:each="i : ${#numbers.sequence(0, page.totalPages - 1)}"
+						th:class="${i == page.number} ? 'active page-item' : 'page-item'">
+						<a class="page-link" href="#" th:href="@{/noticeList(page=${i})}" th:text="${i + 1}"></a>
+					</li>
+					<li class="page-item" th:if="${page.number < page.totalPages - 1}">
+						<a class="page-link" href="#" th:href="@{/more/noticeList(page=${page.number + 1})}">다음</a>
+					</li>
+				</ul>
+			</div>
 		</div>
-
-		<div class="pagination">
-			<ul>
-				<li class="page-item" th:if="${page.number > 0}"><a
-					class="page-link" href="#"
-					th:href="@{/noticeList(page=${page.number - 1})}">이전</a></li>
-				<li th:each="i : ${#numbers.sequence(0, page.totalPages - 1)}"
-					th:class="${i == page.number} ? 'active page-item' : 'page-item'">
-					<a class="page-link" href="#" th:href="@{/noticeList(page=${i})}"
-					th:text="${i + 1}"></a>
-				</li>
-				<li class="page-item" th:if="${page.number < page.totalPages - 1}">
-					<a class="page-link" href="#"
-					th:href="@{/noticeList(page=${page.number + 1})}">다음</a>
-				</li>
-			</ul>
+		<div th:if="${page.getContent().size() < 1}" class="center-content3">
+			<h1>등록된 공지사항이 없습니다.</h1>
 		</div>
 	</div>
-	<div th:if="${page.getContent().size() < 1}" class="center-content3">
-		<h1>등록된 공지사항이 없습니다.</h1>
-	</div>
-</div>
 </body>
 
 </html>
