페이징 완료

--- a/src/main/resources/static/css/my_booking.css
+++ b/src/main/resources/static/css/my_booking.css
@@ -329,3 +329,32 @@ color:grey;
 #del:hover {
 	color: red;
 }
+
+.pagination {
+	display: flex;
+	justify-content: center;
+}
+
+.pagination .page-item {
+	display: inline;
+	margin: 0;
+	padding: 0;
+}
+
+.page-number {
+	padding: 5px;
+}
+
+.page_previous, .page_next{
+	padding: 0px 20px;
+}
+
+.active {
+	font-weight: bold;
+}
+
+.page-item.disabled a.page-link {
+    pointer-events: none;
+    cursor: default; /* 선택적으로 커서 모양 변경 */
+    opacity: 0.5; /* 선택적으로 투명도 조절 */
+}
