--- a/src/main/resources/static/css/dec_kty.css
+++ b/src/main/resources/static/css/dec_kty.css
@@ -116,7 +116,7 @@ li {
 
 .ssss1 {
 	border-bottom: 1px solid #dddddd;
-	width: 680px;
+/* 	width: 100%; */
 	padding-top: 10px;
 	margin-bottom: 20px;
 }
