--- a/src/main/resources/templates/kty/find_food/food_test4.html
+++ b/src/main/resources/templates/kty/find_food/food_test4.html
@@ -12,7 +12,9 @@
 	</div>
 	<div class="left-area">
 		<div class="search_food">
-			<span id="search_food_title"> 키워드 검색</span><br>
+		<div>
+			<span id="search_food_title">키워드 검색</span><br>
+			</div>
 			<div class="row my-3">
 				<div class="col-6">
 					<div class="input-group">
@@ -22,89 +24,85 @@
 							id="btn_search_food">찾기</button>
 					</div>
 				</div>
-
 				<form th:action="@{/tour/daegu_food}" method="get" id="searchForm">
-					<input type="hidden" id="kw" name="kw"
-						th:value="${kw != null ? kw : ''}"> <input type="hidden"
-						id="page" name="page" th:value="${paging.number}">
-				</form>
+					<input type="hidden" id="kw" name="kw" th:value="${kw}"> <input
+						type="hidden" id="page" name="page" th:value="${paging.number}">
 
+				</form>
 			</div>
 			<br>
-			<span id="filter_food_title">상세검색</span><br> <br> <span
-				id="region_type">구역 선택</span><br><br> <select id="region_dropdown">
-				<option id="kw2" value="중구" th:selected="${kw2 == '중구'}">중구</option>
-				<option id="kw2" value="북구" th:selected="${kw2 == '북구'}">북구</option>
-				<option id="kw2" value="서구" th:selected="${kw2 == '서구'}">서구</option>
-				<option id="kw2" value="남구" th:selected="${kw2 == '남구'}">남구</option>
-				<option id="kw2" value="동구" th:selected="${kw2 == '동구'}">동구</option>
-				<option id="kw2" value="달서구" th:selected="${kw2 == '달서구'}">달서구</option>
-				<option id="kw2" value="수성구" th:selected="${kw2 == '수성구'}">수성구</option>
-				<option id="kw2" value="달성군" th:selected="${kw2 == '달성군'}">달성군</option>
+			<span id="filter_food_title">상세검색</span> <span
+				id="region_type">구역 선택</span> <select id="region_dropdown">
+				<option id="kw2Option1" value="중구" th:selected="${kw2 == '중구'}">중구</option>
+				<option id="kw2Option2" value="북구" th:selected="${kw2 == '북구'}">북구</option>
+				<option id="kw2Option3" value="서구" th:selected="${kw2 == '서구'}">서구</option>
+				<option id="kw2Option4" value="남구" th:selected="${kw2 == '남구'}">남구</option>
+				<option id="kw2Option5" value="동구" th:selected="${kw2 == '동구'}">동구</option>
+				<option id="kw2Option6" value="달서구" th:selected="${kw2 == '달서구'}">달서구</option>
+				<option id="kw2Option7" value="수성구" th:selected="${kw2 == '수성구'}">수성구</option>
+				<option id="kw2Option8" value="달성군" th:selected="${kw2 == '달성군'}">달성군</option>
 			</select> <br> <br> <span id="food_type">음식 종류</span>
 			<div class="food_check_type">
-				<input type="checkbox" id="kw3" name="foodType" value="한식"
-					style="margin-left: 10px;"
-					th:checked="${kw3 != null and kw3.contains('한식')}"> <label>한식</label>
-				<input type="checkbox" id="kw3" name="foodType" value="디저트"
-					style="margin-left: 10px;"
-					th:checked="${kw3 != null and kw3.contains('디저트')}"> <label>디저트</label>
-				<input type="checkbox" id="kw3" name="foodType" value="카페"
-					style="margin-left: 10px;"
-					th:checked="${kw3 != null and kw3.contains('카페')}"> <label>카페</label>
-				<input type="checkbox" id="kw3" name="foodType" value="중식"
-					style="margin-left: 10px;"
-					th:checked="${kw3 != null and kw3.contains('중식')}"> <label>중식</label>
-				<br> <input type="checkbox" id="kw3" name="foodType" value="일식"
-					style="margin-left: 10px;"
-					th:checked="${kw3 != null and kw3.contains('일식')}"> <label>일식</label>
-				<input type="checkbox" id="kw3" name="foodType" value="양식"
-					style="margin-left: 10px;"
-					th:checked="${kw3 != null and kw3.contains('양식')}"> <label>양식</label>
-				<input type="checkbox" id="kw3" name="foodType" value="뷔페"
-					style="margin-left: 23px;"
-					th:checked="${kw3 != null and kw3.contains('뷔페')}"> <label>뷔페</label>
-				<input type="checkbox" id="kw3" name="foodType" value="술집"
-					style="margin-left: 10px;"
-					th:checked="${kw3 != null and kw3.contains('술집')}"> <label>술집</label>
+				<input type="checkbox" id="kw3Option1" name="foodType" value="한식"
+					
+					th:checked="${kw3 != null and kw3.contains('한식')}"> <label
+					for="kw3Option1">한식</label> <input type="checkbox" id="kw3Option2"
+					name="foodType" value="디저트"
+					th:checked="${kw3 != null and kw3.contains('디저트')}"> <label
+					for="kw3Option2">디저트</label> <input type="checkbox" id="kw3Option3"
+					name="foodType" value="카페" 
+					th:checked="${kw3 != null and kw3.contains('카페')}"> <label
+					for="kw3Option3">카페</label> <input type="checkbox" id="kw3Option4"
+					name="foodType" value="중식" 
+					th:checked="${kw3 != null and kw3.contains('중식')}"> <label
+					for="kw3Option4">중식</label>  <input type="checkbox"
+					id="kw3Option5" name="foodType" value="일식"
+					
+					th:checked="${kw3 != null and kw3.contains('일식')}"> <label
+					for="kw3Option5">일식</label> <input type="checkbox" id="kw3Option6"
+					name="foodType" value="양식" 
+					th:checked="${kw3 != null and kw3.contains('양식')}"> <label
+					for="kw3Option6">양식</label> <input type="checkbox" id="kw3Option7"
+					name="foodType" value="뷔페" 
+					th:checked="${kw3 != null and kw3.contains('뷔페')}"> <label
+					for="kw3Option7">뷔페</label> <input type="checkbox" id="kw3Option8"
+					name="foodType" value="술집"
+					th:checked="${kw3 != null and kw3.contains('술집')}"> <label
+					for="kw3Option8">술집</label>
 			</div>
 			<div class="parking_check_type">
 				<span id="parking_type">주차 공간</span><br> <input type="checkbox"
-					id="kw4" class="chk_par" name="ParkingType" value="있음"
-					style="margin-left: 10px;"
+					id="kw4Option1" class="chk_par" name="ParkingType" value="있음"
+					
 					th:checked="${kw4 != null and kw4.contains('있음')}"> <label
-					style="color: rgb(87, 87, 87);">있음</label> <input type="checkbox"
-					id="kw4" class="chk_par" name="ParkingType" value="있음"
-					style="margin-left: 10px;"
+					for="kw4Option1" style="color: rgb(87, 87, 87);">있음</label> <input
+					type="checkbox" id="kw4Option2" class="chk_par" name="ParkingType"
+					value="없음" 
 					th:checked="${kw4 != null and kw4.contains('없음')}"> <label
-					style="color: rgb(87, 87, 87);">없음</label>
+					for="kw4Option2" style="color: rgb(87, 87, 87);">없음</label>
 			</div>
-
 			<button id="searchBtn">검색</button>
-
 			<form th:action="@{/tour/daegu_food2}" method="get" id="searchForm2">
 				<input type="hidden" id="kw2" th:value="${kw2}"> <input
 					type="hidden" id="kw3" th:if="${kw3 != null}" th:value="${kw3}">
-				<input type="hidden" id="page" name="page" th:value="${paging.number}">
+				<input type="hidden" id="page" name="page"
+					th:value="${paging.number}">
 			</form>
-			
 			<form th:action="@{/tour/daegu_food3}" method="get" id="searchForm3">
-				<input type="hidden" id="kw2" th:value="${kw2}">
-				<input type="hidden" id="page" name="page" th:value="${paging.number}">
+				<input type="hidden" id="kw2" th:value="${kw2}"> <input
+					type="hidden" id="page" name="page" th:value="${paging.number}">
+			</form>
 			<form th:action="@{/tour/daegu_food4}" method="get" id="searchForm4">
-				<input type="hidden" id="kw2" th:value="${kw2}">
-				<input type="hidden" id="kw4" th:value="${kw4}">
-				<input type="hidden" id="page" name="page" th:value="${paging.number}">
+				<input type="hidden" id="kw2" th:value="${kw2}"> <input
+					type="hidden" id="kw4" th:value="${kw4}"> <input
+					type="hidden" id="page" name="page" th:value="${paging.number}">
 			</form>
+			<form th:action="@{/tour/daegu_food5}" method="get" id="searchForm5">
+				<input type="hidden" id="kw2" th:value="${kw2}"> <input
+					type="hidden" id="kw3" th:if="${kw3 != null}" th:value="${kw3}">
+				<input type="hidden" id="kw4" th:value="${kw4}"> <input
+					type="hidden" id="page" name="page" th:value="${paging.number}">
 			</form>
-				<form th:action="@{/tour/daegu_food5}" method="get" id="searchForm5">
-				<input type="hidden" id="kw2" th:value="${kw2}"> 
-				<input	type="hidden" id="kw3" th:if="${kw3 != null}" th:value="${kw3}">
-				<input	type="hidden" id="kw4" th:if="${kw4 != null}" th:value="${kw4}">
-				<input type="hidden" id="page" name="page" th:value="${paging.number}">
-			</form>
-			<br>
-
 
 
 
