--- a/src/main/resources/static/css/kty2.css
+++ b/src/main/resources/static/css/kty2.css
@@ -18,8 +18,8 @@
 }
 .nav-area {
 	position: fixed;
-	top: 0;
-	left: 0;
+	top: -10px;
+	left: 300px;
 	height: 92%;
 	margin-top: 86px;
 	width: 400px;
@@ -33,15 +33,17 @@
 }
 
 #address-map {
-	position: fixed;
-	top: -15px;
-	left: 420px;
-	width: calc(100% - 450px);
+	position: absolute;
+	top: 42px;
+	/* left: 420px; */
+	width: calc(70% - 450px);
 	border-radius:15px;
-	height: 100%;
+	height: 88%;
 	display: flex;
 	justify-content: center;
 	align-items: center;
+	margin: auto;
+	right: 320px;
 }
 
 #map {
@@ -51,29 +53,31 @@
 }
 
 .box {
-	width: 85%;
+	width: 90%;
 	height: 80%;
-	margin-right: 2px;
-	border: 1px solid black;
+	/* margin-right: 2px; */
+	border: 1px solid #e3e3e3;
 	text-align: center;
 	/* Added margin */
 	padding: 10px 10px 10px 10px;
-	margin-left: 20px;
+	/* margin-left: 20px; */
 	overflow: auto;
 	margin-top: 10px;
 	/* Added margin-top */
+	border-radius: 10px;
+	/* box-shadow: 0px 0px 5px #444; */
 }
 
 .output-item {
-	width: 320px;
-	height: 182px;
-	border: 1px solid black;
+	height: auto;
+	border: 1px solid #e3e3e3;
 	text-align: left;
 	border-radius: 5px;
-	padding-top: 15px;
-	padding-left: 5px;
+	/* padding-top: 15px; */
+	/* padding-left: 5px; */
 	font-size: 14px;
-
+	padding: 10px;
+	color: rgb(26 26 26);
 }
 
 .right-area{
@@ -88,7 +92,7 @@
 }
 
 .selected {
-	background-color: rgb(255, 255, 128);
+	background-color: rgb(255 225 218);
 	font-weight: bold;
 }
 
@@ -96,6 +100,8 @@
 	font-size:20px;
 	margin-top:20px;
 	text-align: center;
+	color: rgb(26 26 26);
+	/* color: var(--text-color); */
 }
 
 .wrap {
