--- a/src/main/resources/static/css/product_detail.css
+++ b/src/main/resources/static/css/product_detail.css
@@ -60,7 +60,7 @@ body {
 }
 
 .page_right {
-		width: 480px;
+	width: 480px;
 	padding-left: 30px;
 	/* 	margin-left: 30px; */
 }
@@ -159,7 +159,7 @@ div.tabcontents {
 .coment_author {
 	/*    border-radius:8px; */
 	background-color: rgb(251, 251, 251);
-/* 	width: 450px; */
+	/* 	width: 450px; */
 	height: 125px;
 	margin-top: 58px;
 	padding: 20px;
@@ -259,7 +259,7 @@ div.tabcontents {
 }
 
 #title_revieww {
-	margin-left: 60px;
+	margin-left: 40px;
 	font-size: 20px;
 	margin-bottom: 60px;
 }
@@ -306,13 +306,16 @@ li {
 
 /* 모달 콘텐츠 스타일 */
 .modal-content_declaration {
-	margin: 15% auto;
-	padding: 20px;
-	border: 1px solid #888;
-	width: 400px;
-	height: 550px;
-	background-color: white;
-	position: relative;
+	margin: 200px auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 400px;
+    height: 550px;
+    background-color: white;
+    position: relative;
+    border-radius: 10px;
+    box-shadow: 0px 0px 5px #444;
+
 }
 
 .modal-content_declaration .close {
@@ -339,19 +342,21 @@ li {
 }
 
 #review_list {
-	margin-left: 80px;
+	/* 	margin-left: 80px; */
+	
 }
 
 #declr_btn {
-	margin-top: 10px;
-	margin-left: 110px;
-	width: 200px;
-	height: 40px;
-	border: none;
-	background-color: orange;
-	font-size: 15px;
-	font-weight: bold;
-	color: white;
+margin-top: 10px;
+    margin-left: 100px;
+    width: 200px;
+    height: 40px;
+    border: none;
+    background-color: orange;
+    font-size: 15px;
+    font-weight: bold;
+    color: white;
+    border-radius: 5px;
 }
 
 #declr_btn:hover {
@@ -371,8 +376,9 @@ li {
 }
 
 .declaration {
-	position: absolute;
-	left: 1200px;
+	/* 	position: absolute; */
+	/* 	left: 1200px; */
+	right: 497px;
 }
 
 .declaration:hover {
