--- a/src/main/resources/templates/kty/find/daegu_room2.html
+++ b/src/main/resources/templates/kty/find/daegu_room2.html
@@ -218,8 +218,7 @@
 						<a th:if="${page >= 0 and page < paging.totalPages}"
 							th:classappend="${page == paging.number} ? 'page-link10 active' : 'page-link10'"
 							th:href="@{/tour/daegu_room10(page=${page},kw2=${kw2},kw6=${kw6})}"
-							th:data-page="${page}"> <span th:text="${page}"
-							th:style="${page == paging.number ? 'color: #00BFFF;' : ''}"></span>
+							th:data-page="${page}"> <span th:text="${page + 1}"></span>
 						</a>
 					</th:block> <a class="page-link10"
 					th:if="${paging.number < paging.totalPages - 1}"
@@ -244,8 +243,7 @@
 						<a th:if="${page >= 0 and page < paging.totalPages}"
 							th:classappend="${page == paging.number} ? 'page-link11 active' : 'page-link11'"
 							th:href="@{/tour/daegu_room11(page=${page},kw2=${kw2},kw6=${kw6},kw7=${kw7})}"
-							th:data-page="${page}"> <span th:text="${page}"
-							th:style="${page == paging.number ? 'color: #00BFFF;' : ''}"></span>
+							th:data-page="${page}"> <span th:text="${page + 1}"></span>
 						</a>
 					</th:block> <a class="page-link11"
 					th:if="${paging.number < paging.totalPages - 1}"
@@ -270,8 +268,7 @@
 						<a th:if="${page >= 0 and page < paging.totalPages}"
 							th:classappend="${page == paging.number} ? 'page-link12 active' : 'page-link12'"
 							th:href="@{/tour/daegu_room12(page=${page},kw2=${kw2},kw7=${kw7})}"
-							th:data-page="${page}"> <span th:text="${page}"
-							th:style="${page == paging.number ? 'color: #00BFFF;' : ''}"></span>
+							th:data-page="${page}"> <span th:text="${page + 1}"></span>
 						</a>
 					</th:block> <a class="page-link12"
 					th:if="${paging.number < paging.totalPages - 1}"
@@ -296,8 +293,7 @@
 						<a th:if="${page >= 0 and page < paging.totalPages}"
 							th:classappend="${page == paging.number} ? 'page-link13 active' : 'page-link13'"
 							th:href="@{/tour/daegu_room13(page=${page},kw5=${kw5},kw6=${kw6})}"
-							th:data-page="${page}"> <span th:text="${page}"
-							th:style="${page == paging.number ? 'color: #00BFFF;' : ''}"></span>
+							th:data-page="${page}"> <span th:text="${page + 1}"></span>
 						</a>
 					</th:block> <a class="page-link13"
 					th:if="${paging.number < paging.totalPages - 1}"
@@ -322,8 +318,7 @@
 						<a th:if="${page >= 0 and page < paging.totalPages}"
 							th:classappend="${page == paging.number} ? 'page-link14 active' : 'page-link14'"
 							th:href="@{/tour/daegu_room14(page=${page},kw5=${kw5},kw6=${kw6},kw7=${kw7})}"
-							th:data-page="${page}"> <span th:text="${page}"
-							th:style="${page == paging.number ? 'color: #00BFFF;' : ''}"></span>
+							th:data-page="${page}"> <span th:text="${page + 1}"></span>
 						</a>
 					</th:block> <a class="page-link14"
 					th:if="${paging.number < paging.totalPages - 1}"
@@ -349,8 +344,7 @@
 						<a th:if="${page >= 0 and page < paging.totalPages}"
 							th:classappend="${page == paging.number} ? 'page-link15 active' : 'page-link15'"
 							th:href="@{/tour/daegu_room15(page=${page},kw6=${kw6},kw7=${kw7})}"
-							th:data-page="${page}"> <span th:text="${page}"
-							th:style="${page == paging.number ? 'color: #00BFFF;' : ''}"></span>
+							th:data-page="${page}"> <span th:text="${page + 1}"></span>
 						</a>
 					</th:block> <a class="page-link15"
 					th:if="${paging.number < paging.totalPages - 1}"
