--- a/src/main/resources/templates/syw/inquiry.html
+++ b/src/main/resources/templates/syw/inquiry.html
@@ -12,7 +12,7 @@
 		<div id="container">
 
 			<div id="new-inquiry-form">
-				<h4>경상도숙박장사 이용 중 불편하신 점을 문의주시면 최대한 빠른 시간에 답변 드리겠습니다.</h4>
+				<h4>DAEBAK 이용 중 불편하신 점을 문의주시면 최대한 빠른 시간에 답변 드리겠습니다.</h4>
 				<form th:action="@{/inquiry}" method="post">
 					<label for="category">숙박 카테고리</label>
 					<select id="category" name="category" required>
