--- a/src/main/resources/templates/error/403.html
+++ b/src/main/resources/templates/error/403.html
@@ -4,7 +4,7 @@
 	<link rel="stylesheet" href="/css/error.css">
   <meta charset="UTF-8">
   <title>No access</title>
-  <img src="/img/noaccess.png" alt="Error Image" class="image">
+  <img src="/img/noaccess2.png" alt="Error Image" class="image">
 </head>
 <body class="error1_kty">
   <h1  class="error2_kty">접근금지(No access)</h1>
