--- a/src/main/resources/templates/error/400.html
+++ b/src/main/resources/templates/error/400.html
@@ -4,7 +4,7 @@
 	<link rel="stylesheet" href="/css/error.css">
   <meta charset="UTF-8">
   <title>No access</title>
-  <img src="/img/noaccess.png" alt="Error Image" class="image">
+  <img src="/img/noaccess4.png" alt="Error Image" class="image">
 </head>
 <body class="error1_kty">
    <h1 class="error2_kty">올바르지 않은 경로 입력입니다.</h1>
