--- a/src/main/resources/templates/error/404.html
+++ b/src/main/resources/templates/error/404.html
@@ -4,11 +4,11 @@
 	<link rel="stylesheet" href="/css/error.css">
   <meta charset="UTF-8">
   <title>No access</title>
-  <img src="/img/noaccess.png" alt="Error Image" class="image">
+  <img src="/img/noaccess5.png" alt="Error Image" class="image">
 </head>
 <body class="error1_kty">
 	
-  <h1 class="error2_kty">존재하지 않는 페이지(404)</h1>
+  <h1 class="error2_kty">존재하지 않는 페이지(Not Found)</h1>
   <p class="error3_kty">이곳은 존재하지 않는 페이지 입니다.</p>
 </body>
 </html>
