--- a/src/main/resources/templates/kty/find/daegu_room2.html
+++ b/src/main/resources/templates/kty/find/daegu_room2.html
@@ -210,7 +210,7 @@
 			<ul class="pagination"
 				style="flex-direction: row; list-style-type: none;">
 				<li class="page-item" style="white-space: nowrap;"><a
-					class="page-link10" th:if="${paging.number > 0}"
+					class="page-link10" 
 					th:href="@{/tour/daegu_room10(page=${paging.number-1},kw2=${kw2},kw6=${kw6})}">
 						<span>이전</span>
 				</a> <th:block
@@ -221,7 +221,6 @@
 							th:data-page="${page}"> <span th:text="${page + 1}"></span>
 						</a>
 					</th:block> <a class="page-link10"
-					th:if="${paging.number < paging.totalPages - 1}"
 					th:href="@{/tour/daegu_room10(page=${paging.number+1},kw2=${kw2},kw6=${kw6})}">
 						<span>다음</span>
 				</a></li>
@@ -235,7 +234,7 @@
 			<ul class="pagination"
 				style="flex-direction: row; list-style-type: none;">
 				<li class="page-item" style="white-space: nowrap;"><a
-					class="page-link11" th:if="${paging.number > 0}"
+					class="page-link11" 
 					th:href="@{/tour/daegu_room11(page=${paging.number-1},kw2=${kw2},kw6=${kw6},kw7=${kw7})}">
 						<span>이전</span>
 				</a> <th:block
@@ -246,7 +245,6 @@
 							th:data-page="${page}"> <span th:text="${page + 1}"></span>
 						</a>
 					</th:block> <a class="page-link11"
-					th:if="${paging.number < paging.totalPages - 1}"
 					th:href="@{/tour/daegu_room11(page=${paging.number+1},kw2=${kw2},kw6=${kw6},kw7=${kw7})}">
 						<span>다음</span>
 				</a></li>
@@ -260,7 +258,7 @@
 			<ul class="pagination"
 				style="flex-direction: row; list-style-type: none;">
 				<li class="page-item" style="white-space: nowrap;"><a
-					class="page-link12" th:if="${paging.number > 0}"
+					class="page-link12"
 					th:href="@{/tour/daegu_room12(page=${paging.number-1},kw2=${kw2},kw7=${kw7})}">
 						<span>이전</span>
 				</a> <th:block
@@ -271,7 +269,6 @@
 							th:data-page="${page}"> <span th:text="${page + 1}"></span>
 						</a>
 					</th:block> <a class="page-link12"
-					th:if="${paging.number < paging.totalPages - 1}"
 					th:href="@{/tour/daegu_room12(page=${paging.number+1},kw2=${kw2},kw7=${kw7})}">
 						<span>다음</span>
 				</a></li>
@@ -285,7 +282,7 @@
 			<ul class="pagination"
 				style="flex-direction: row; list-style-type: none;">
 				<li class="page-item" style="white-space: nowrap;"><a
-					class="page-link13" th:if="${paging.number > 0}"
+					class="page-link13"
 					th:href="@{/tour/daegu_room13(page=${paging.number-1},kw5=${kw5},kw6=${kw6})}">
 						<span>이전</span>
 				</a> <th:block
@@ -296,7 +293,6 @@
 							th:data-page="${page}"> <span th:text="${page + 1}"></span>
 						</a>
 					</th:block> <a class="page-link13"
-					th:if="${paging.number < paging.totalPages - 1}"
 					th:href="@{/tour/daegu_room13(page=${paging.number+1},kw5=${kw5},kw6=${kw6})}">
 						<span>다음</span>
 				</a></li>
@@ -310,7 +306,7 @@
 			<ul class="pagination"
 				style="flex-direction: row; list-style-type: none;">
 				<li class="page-item" style="white-space: nowrap;"><a
-					class="page-link14" th:if="${paging.number > 0}"
+					class="page-link14"
 					th:href="@{/tour/daegu_room14(page=${paging.number-1},kw5=${kw5},kw6=${kw6},kw7=${kw7})}">
 						<span>이전</span>
 				</a> <th:block
@@ -321,7 +317,6 @@
 							th:data-page="${page}"> <span th:text="${page + 1}"></span>
 						</a>
 					</th:block> <a class="page-link14"
-					th:if="${paging.number < paging.totalPages - 1}"
 					th:href="@{/tour/daegu_room14(page=${paging.number+1},kw5=${kw5},kw6=${kw6},kw7=${kw7})}">
 						<span>다음</span>
 				</a></li>
@@ -336,7 +331,7 @@
 			<ul class="pagination"
 				style="flex-direction: row; list-style-type: none;">
 				<li class="page-item" style="white-space: nowrap;"><a
-					class="page-link15" th:if="${paging.number > 0}"
+					class="page-link15"
 					th:href="@{/tour/daegu_room15(page=${paging.number-1},kw6=${kw6},kw7=${kw7})}">
 						<span>이전</span>
 				</a> <th:block
@@ -347,7 +342,7 @@
 							th:data-page="${page}"> <span th:text="${page + 1}"></span>
 						</a>
 					</th:block> <a class="page-link15"
-					th:if="${paging.number < paging.totalPages - 1}"
+
 					th:href="@{/tour/daegu_room15(page=${paging.number+1},kw6=${kw6},kw7=${kw7})}">
 						<span>다음</span>
 				</a></li>
