--- a/src/main/resources/static/css/kty3.css
+++ b/src/main/resources/static/css/kty3.css
@@ -433,16 +433,20 @@ label {
 .hotel_sectors_hk {
 	font-size: 16px;
 	display: flex;
+	bottom: 1px;
+	position: relative;
 }
 
 .hotel_rating_hk {
-	margin-left: 10px;
+	margin: 0 10px;
 	color: orange;
+	/* text-shadow: 1px 1px 3px #ffffff; */
 }
 
 .hotel_reviews_hk {
 	/* 	color: orange; */
-	
+	bottom: -2px;
+	position: relative;
 }
 
 .hotel_address_hk {
