--- a/src/main/resources/static/css/pyr_registerRoom.css
+++ b/src/main/resources/static/css/pyr_registerRoom.css
@@ -72,7 +72,7 @@
 	overflow-wrap: break-word;
 }
 
-.partner_comment p{
+.partner_comment p {
 	margin-bottom: 0px;
 }
 
@@ -95,8 +95,8 @@
 	cursor: pointer;
 	border: none;
 	text-decoration: none;
-    font-size: 16px;
-    font-weight: bold;
+	font-size: 16px;
+	font-weight: bold;
 }
 
 #pdMainEditBtn:hover {
@@ -115,8 +115,8 @@
 	cursor: pointer;
 	border: none;
 	text-decoration: none;
-    font-size: 16px;
-    font-weight: bold;
+	font-size: 16px;
+	font-weight: bold;
 }
 
 #deleateAccBtn:hover {
@@ -165,8 +165,6 @@
 	margin: 2px 0 0 0;
 }
 
-
-
 /* 여기서 가져온거 */
 
 /* ============= 상품 리스트 ============= */
@@ -199,8 +197,8 @@
 	transition: opacity 0.4s ease-in-out;
 	border: none;
 	text-decoration: none;
-    font-size: 16px;
-    font-weight: bold;
+	font-size: 16px;
+	font-weight: bold;
 }
 
 #prListEdit #prListEditBtn:hover {
@@ -475,6 +473,7 @@
 .Product_contents .product_detail {
 	width: 300px;
 	height: 60px;
+	overflow: auto;
 }
 
 .Product_contents .edit_detail {
