--- a/src/main/resources/templates/kty/find_food/food_test6.html
+++ b/src/main/resources/templates/kty/find_food/food_test6.html
@@ -7,19 +7,20 @@
 <html layout:decorate="~{jjj/header}">
 <div id="my_infomation_modify" layout:fragment="content"
 	class="container my-3">
-<div class="my_position">대구 맛집 검색
- <!--  	<div id="current_my_dongnae"><br> </div> -->
+	<div class="my_position">
+		대구 맛집 검색
+		<!--  	<div id="current_my_dongnae"><br> </div> -->
 	</div>
 	<div class="left-area">
 		<div class="search_food">
-		<div>
-			<span id="search_food_title">키워드 검색</span><br>
+			<div>
+				<span id="search_food_title">키워드 검색</span><br>
 			</div>
 			<div class="row my-3">
 				<div class="col-6">
 					<div class="input-group">
 						<input type="text" id="search_food" class="form-control"
-							th:value="${kw}"  placeholder=" 키워드를 입력하세요">
+							th:value="${kw}" placeholder=" 키워드를 입력하세요">
 						<button class="btn btn-outline-secondary" type="button"
 							id="btn_search_food">찾기</button>
 					</div>
@@ -30,8 +31,7 @@
 
 				</form>
 			</div>
-			<br>
-			<span id="filter_food_title">상세검색</span> <span
+			<br> <span id="filter_food_title">상세검색</span> <span
 				id="region_type">구역 선택</span> <select id="region_dropdown">
 				<option id="kw2Option1" value="중구" th:selected="${kw2 == '중구'}">중구</option>
 				<option id="kw2Option2" value="북구" th:selected="${kw2 == '북구'}">북구</option>
@@ -43,43 +43,40 @@
 				<option id="kw2Option8" value="달성군" th:selected="${kw2 == '달성군'}">달성군</option>
 			</select>
 			<div class="food_check_type">
-			<span id="food_type">음식 종류</span>
-					<input type="checkbox" id="kw3Option1" name="foodType" value="한식"
+				<span id="food_type">음식 종류</span> <input type="checkbox"
+					id="kw3Option1" name="foodType" value="한식"
 					th:checked="${kw3 != null and kw3.contains('한식')}"> <label
-					for="kw3Option1">한식</label><br> <input type="checkbox" id="kw3Option2"
-					name="foodType" value="디저트"
+					for="kw3Option1">한식</label><br> <input type="checkbox"
+					id="kw3Option2" name="foodType" value="디저트"
 					th:checked="${kw3 != null and kw3.contains('디저트')}"> <label
-					for="kw3Option2">디저트</label><br> <input type="checkbox" id="kw3Option3"
-					name="foodType" value="카페" 
+					for="kw3Option2">디저트</label><br> <input type="checkbox"
+					id="kw3Option3" name="foodType" value="카페"
 					th:checked="${kw3 != null and kw3.contains('카페')}"> <label
-					for="kw3Option3">카페</label> <br><input type="checkbox" id="kw3Option4"
-					name="foodType" value="중식" 
+					for="kw3Option3">카페</label> <br>
+				<input type="checkbox" id="kw3Option4" name="foodType" value="중식"
 					th:checked="${kw3 != null and kw3.contains('중식')}"> <label
 					for="kw3Option4">중식</label> <br> <input type="checkbox"
 					id="kw3Option5" name="foodType" value="일식"
-					
 					th:checked="${kw3 != null and kw3.contains('일식')}"> <label
-					for="kw3Option5">일식</label> <br><input type="checkbox" id="kw3Option6"
-					name="foodType" value="양식" 
+					for="kw3Option5">일식</label> <br>
+				<input type="checkbox" id="kw3Option6" name="foodType" value="양식"
 					th:checked="${kw3 != null and kw3.contains('양식')}"> <label
-					for="kw3Option6">양식</label><br> <input type="checkbox" id="kw3Option7"
-					name="foodType" value="뷔페" 
+					for="kw3Option6">양식</label><br> <input type="checkbox"
+					id="kw3Option7" name="foodType" value="뷔페"
 					th:checked="${kw3 != null and kw3.contains('뷔페')}"> <label
-					for="kw3Option7">뷔페</label> <br><input type="checkbox" id="kw3Option8"
-					name="foodType" value="술집"
+					for="kw3Option7">뷔페</label> <br>
+				<input type="checkbox" id="kw3Option8" name="foodType" value="술집"
 					th:checked="${kw3 != null and kw3.contains('술집')}"> <label
 					for="kw3Option8">술집</label>
 			</div>
 			<div class="parking_check_type">
 				<span id="parking_type">주차 공간</span><input type="checkbox"
 					id="kw4Option1" class="chk_par" name="ParkingType" value="있음"
-					
 					th:checked="${kw4 != null and kw4.contains('있음')}"> <label
 					for="kw4Option1" style="color: rgb(87, 87, 87);">있음</label> <input
 					type="checkbox" id="kw4Option2" class="chk_par" name="ParkingType"
-					value="없음" 
-					th:checked="${kw4 != null and kw4.contains('없음')}"> <label
-					for="kw4Option2" style="color: rgb(87, 87, 87);">없음</label>
+					value="없음" th:checked="${kw4 != null and kw4.contains('없음')}">
+				<label for="kw4Option2" style="color: rgb(87, 87, 87);">없음</label>
 			</div>
 			<button id="searchBtn">검색</button>
 			<form th:action="@{/tour/daegu_food}" method="get" id="searchForm2">
